unpackaged/main/default/objects/Opportunity/fields/Assigned_to__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to__c</fullName>
    <label>Assigned to</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tony Kelly</fullName>
            </value>
            <value>
                <fullName>Mark Alfer</fullName>
            </value>
            <value>
                <fullName>Keigley Griffiths</fullName>
            </value>
            <value>
                <fullName>David Brown</fullName>
            </value>
            <value>
                <fullName>Andy Mack</fullName>
                <isActive>false</isActive>
                <label>Andy Mack</label>
            </value>
            <value>
                <fullName>Chris Griffin</fullName>
                <isActive>false</isActive>
                <label>Chris Griffin</label>
            </value>
            <value>
                <fullName>Ellen Lavender</fullName>
                <isActive>false</isActive>
                <label>Ellen Lavender</label>
            </value>
            <value>
                <fullName>Greg Horne</fullName>
                <isActive>false</isActive>
                <label>Greg Horne</label>
            </value>
            <value>
                <fullName>Jim White</fullName>
                <isActive>false</isActive>
                <label>Jim White</label>
            </value>
            <value>
                <fullName>Lisa Pritchard</fullName>
                <isActive>false</isActive>
                <label>Lisa Pritchard</label>
            </value>
            <value>
                <fullName>Lloyd Birkhead</fullName>
                <isActive>false</isActive>
                <label>Lloyd Birkhead</label>
            </value>
            <value>
                <fullName>Monica Mackintosh</fullName>
                <isActive>false</isActive>
                <label>Monica Mackintosh</label>
            </value>
            <value>
                <fullName>Nathan Barton</fullName>
                <isActive>false</isActive>
                <label>Nathan Barton</label>
            </value>
            <value>
                <fullName>Nick Moore</fullName>
                <isActive>false</isActive>
                <label>Nick Moore</label>
            </value>
            <value>
                <fullName>Richard Harvey</fullName>
                <isActive>false</isActive>
                <label>Richard Harvey</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>