unpackaged/main/default/objects/Opportunity/fields/Confidence_in_solution__c.field-meta.xml
<CustomField>
    <fullName>Confidence_in_solution__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confidence in solution</label>
    <type>Checkbox</type>
</CustomField>