unpackaged/main/default/objects/Opportunity/fields/Credibility__c.field-meta.xml
<CustomField>
    <fullName>Credibility__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credibility</label>
    <type>Checkbox</type>
</CustomField>