unpackaged/main/default/objects/Opportunity/fields/Data_Quality_Description__c.field-meta.xml
<CustomField>
    <fullName>Data_Quality_Description__c</fullName>
    <formula>IF( Data_Quality_Score__c =100,"All Opportunity Details Captured", "Missing: "&amp;IF( ISPICKVAL( Type ,""),"Type, ","")&amp;""&amp;IF(LEN( TEXT(MONTH(CloseDate))) = 0, "Close Date, ","")&amp;""&amp;IF( Amount &lt;= 0, "Amount, ","")&amp;""&amp;IF( ISPICKVAL( LeadSource,""), "Lead Source, ","")&amp;""&amp;IF( LEN(NextStep)=0, "Next Steps",""))</formula>
    <label>Data Quality Description</label>
    <type>Text</type>
</CustomField>