unpackaged/main/default/objects/Opportunity/fields/Demo_pres_meeting__c.field-meta.xml
<CustomField>
    <fullName>Demo_pres_meeting__c</fullName>
    <label>Demo / pres / meeting</label>
    <type>Date</type>
</CustomField>