unpackaged/main/default/objects/Opportunity/fields/EOI_submitted__c.field-meta.xml
<CustomField>
    <fullName>EOI_submitted__c</fullName>
    <label>EOI submitted</label>
    <type>Date</type>
</CustomField>