unpackaged/main/default/objects/Opportunity/fields/Geography__c.field-meta.xml
<CustomField>
    <fullName>Geography__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Geography</label>
    <type>Checkbox</type>
</CustomField>