unpackaged/main/default/objects/Opportunity/fields/Implementation_timescales__c.field-meta.xml
<CustomField>
    <fullName>Implementation_timescales__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Implementation timescales</label>
    <type>Checkbox</type>
</CustomField>