unpackaged/main/default/objects/Opportunity/fields/Implementation_too_long__c.field-meta.xml
<CustomField>
    <fullName>Implementation_too_long__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Implementation too long</label>
    <type>Checkbox</type>
</CustomField>