unpackaged/main/default/objects/Opportunity/fields/Incumbent_brand_loyalty__c.field-meta.xml
<CustomField>
    <fullName>Incumbent_brand_loyalty__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Incumbent / brand loyalty</label>
    <type>Checkbox</type>
</CustomField>