unpackaged/main/default/objects/Opportunity/fields/Issues_with_Salesforce__c.field-meta.xml
<CustomField>
    <fullName>Issues_with_Salesforce__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Issues with Salesforce</label>
    <type>Checkbox</type>
</CustomField>