unpackaged/main/default/objects/Opportunity/fields/ITT_submitted__c.field-meta.xml
<CustomField>
    <fullName>ITT_submitted__c</fullName>
    <label>ITT submitted</label>
    <type>Date</type>
</CustomField>