unpackaged/main/default/objects/Opportunity/fields/Lack_of_innovation__c.field-meta.xml
<CustomField>
    <fullName>Lack_of_innovation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lack of innovation</label>
    <type>Checkbox</type>
</CustomField>