unpackaged/main/default/objects/Opportunity/fields/Lack_of_sector_experience__c.field-meta.xml
<CustomField>
    <fullName>Lack_of_sector_experience__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lack of experience / referencability</label>
    <type>Checkbox</type>
</CustomField>