unpackaged/main/default/objects/Opportunity/fields/Latest_stage__c.field-meta.xml
<CustomField>
    <fullName>Latest_stage__c</fullName>
    <label>Latest stage</label>
    <length>100</length>
    <type>Text</type>
</CustomField>