unpackaged/main/default/objects/Opportunity/fields/No_budget_lost_funding__c.field-meta.xml
<CustomField>
    <fullName>No_budget_lost_funding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No budget / lost funding</label>
    <type>Checkbox</type>
</CustomField>