unpackaged/main/default/objects/Opportunity/fields/Number_of_Service_Connections__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Service_Connections__c</fullName>
    <label>Number of Service Connections</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>