unpackaged/main/default/objects/Opportunity/fields/Opportunity_product__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_product__c</fullName>
    <label>Opportunity product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Software - Aptumo</fullName>
            </value>
            <value>
                <fullName>Software - RapidXtra</fullName>
            </value>
            <value>
                <fullName>Software - RX Licence</fullName>
            </value>
            <value>
                <fullName>Software - both</fullName>
            </value>
            <value>
                <fullName>Office_debt</fullName>
                <label>Office debt</label>
            </value>
            <value>
                <fullName>Field debt</fullName>
            </value>
            <value>
                <fullName>Debt - both</fullName>
            </value>
            <value>
                <fullName>Revenue protection</fullName>
            </value>
            <value>
                <fullName>Contact centre</fullName>
            </value>
            <value>
                <fullName>Back office services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>