unpackaged/main/default/objects/Opportunity/fields/PQQ_submitted__c.field-meta.xml
<CustomField>
    <fullName>PQQ_submitted__c</fullName>
    <label>PQQ submitted</label>
    <type>Date</type>
</CustomField>