unpackaged/main/default/objects/Opportunity/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Price</label>
    <type>Checkbox</type>
</CustomField>