unpackaged/main/default/objects/Opportunity/fields/Received_date__c.field-meta.xml
<CustomField>
    <fullName>Received_date__c</fullName>
    <label>Received date</label>
    <type>Date</type>
</CustomField>