unpackaged/main/default/objects/Opportunity/fields/Scalability__c.field-meta.xml
<CustomField>
    <fullName>Scalability__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scalability</label>
    <type>Checkbox</type>
</CustomField>