unpackaged/main/default/objects/Opportunity/fields/Strong_experience_referencability__c.field-meta.xml
<CustomField>
    <fullName>Strong_experience_referencability__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Strong experience / referencability</label>
    <type>Checkbox</type>
</CustomField>