unpackaged/main/default/objects/Opportunity/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>Contract_length__c</columns>
    <columns>Echo_lead_s__c</columns>
    <columns>Assigned_to__c</columns>
    <columns>Opportunity_product__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Region__c</field>
        <operation>equals</operation>
        <value>UK</value>
    </filters>
    <label>All opportunities - UK</label>
</ListView>