unpackaged/main/default/objects/Opportunity/listViews/Default_Opportunity_Pipeline.listView-meta.xml
<ListView>
    <fullName>Default_Opportunity_Pipeline</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Opportunity_product__c</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Assigned_to__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Result__c</field>
        <operation>notContain</operation>
        <value>Win,Loss,No result due,Echo withdrew,Client withdrew</value>
    </filters>
    <label>Opportunity Pipeline</label>
</ListView>